# CeleryCapsule

./: README.md  pyproject.toml  run.py  worker.py
conf/celery/: base.py
conf/log/: base.py
myapp/tasks/: send_message.py
