[tool.poetry]
name = "celery task"
version = "0.1.0"
description = ""
authors = ["mohmdfo <mohammad.fotouhi80@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.3.4"
isort = "^5.12.0"
black = "^23.10.1"
flower = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
